--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
-  gcp-gcr: cimg/gcp-gcr@0.6.1
-  cloudrun: cimg/gcp-cloud-run@1.0.0
+  gcp-gcr: circleci/gcp-gcr@0.6.1
+  cloudrun: circleci/gcp-cloud-run@1.0.0
 jobs:
   build_test:
     working_directory: ~/go/src/medically-core
