--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: Run CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
